--- a/spring/compose.yaml
+++ b/spring/compose.yaml
@@ -1,11 +1,12 @@
 services:
   spring-boot-app:
-    image: your-spring-boot-app:latest # Replace this with your Spring Boot app Docker image
     container_name: spring-boot-app
+    build:
+      context: ./
+      dockerfile: Dockerfile
     ports:
-      - "8080:8080"
+      - '8080:8080'
     environment:
-      SPRING_PROFILES_ACTIVE: prod
       MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE: prometheus
       MANAGEMENT_METRICS_EXPORT_PROMETHEUS_ENABLED: true
     networks:
